.cd/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backoffice-svc
  namespace: backoffice
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: http
      targetPort: 8080
  selector:
    app: backoffice
