.cd/kustomize/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backoffice-ing
  namespace: backoffice
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: backoffice.amoylabs.com
      http:
        paths:
          - path: /
            backend:
              serviceName: backoffice-svc
              servicePort: 8080
